<resources>
    <string name="app_name">Guru</string>
    <string name="todo">TODO</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="science_and_technology">Science and Technology</string>
    <string name="history">History</string>
    <string name="biology">Biology</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="submit">Submit</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="camphor">Camphor</string>
    <string name="napthalene">Napthalene</string>
    <string name="iodine">Iodine</string>
    <string name="_10_which_of_the_following_substances_undergo_sublimation_on_heating">10.Which of the following substances undergo ‘sublimation’ on heating ?</string>
    <string name="nylon">Nylon</string>
    <string name="celluloid">Celluloid</string>
    <string name="polyethene">Polyethene</string>
    <string name="bakelite">Bakelite</string>
    <string name="_9_which_among_the_following_was_first_human_made_plastic">9.Which among the following was first human-made plastic ?</string>
    <string name="write_your_answer">Write your answer</string>
    <string name="_8_albert_einstein_was_awarded_nobel_prize_for_his_path_breaking_research_and_formulation_of_the">8.Albert Einstein was awarded Nobel Prize for his path-breaking research and formulation of the:</string>
    <string name="dr_a_p_j_abdul_kalam">Dr. A. P. J. Abdul Kalam</string>
    <string name="dr_hargobind_khurana">Dr. Hargobind Khurana</string>
    <string name="dr_s_chandrasekhar">Dr. S. Chandrasekhar</string>
    <string name="dr_c_v_raman">Dr. C. V. Raman</string>
    <string name="_7_who_is_popularly_known_as_missile_man_of_india">7.Who is popularly known as ‘Missile Man of India’?</string>
    <string name="bhaskara">Bhaskara</string>
    <string name="rohini">Rohini</string>
    <string name="insat_a">INSAT – A</string>
    <string name="aryabhatta">Aryabhatta</string>
    <string name="_6_of_the_following_indian_satellites_which_one_is_intended_for_long_distance_telecommunications_for_transmitting_tv_programmes">6.Of the following Indian satellites, which one is intended for long distance telecommunications for transmitting TV programmes ?</string>
    <string name="optic_fibers_can_carry_a_signal_over_a_single_fiber_unlike_the_electricity_which_requires_a_pair_of_copper_wires">Optic Fibers can carry a signal over a single fiber, unlike the electricity which requires a pair of Copper wires.</string>
    <string name="optic_fibers_can_be_used_to_transmit_more_signals_that_copper_wires">Optic Fibers can be used to transmit more signals that Copper Wires.</string>
    <string name="optic_fibers_are_not_susceptible_to_the_electrical_interference">Optic Fibers are NOT susceptible to the electrical interference.</string>
    <string name="_5_which_among_the_following_advantages_of_the_optic_fibers_and_the_copper_wires">5.Which among the following advantages of the Optic Fibers and the Copper wires ?</string>
    <string name="prithivi">Prithivi</string>
    <string name="becquerel">Becquerel</string>
    <string name="akash">Akash</string>
    <string name="astra">Astra</string>
    <string name="_4_which_one_of_the_following_is_an_air_to_air_missile">4.Which one of the following is an ‘Air-to-Air’ missile ?</string>
    <string name="arya_bhatta_1">Arya Bhatta – 1</string>
    <string name="kalpana_1">Kalpana – 1</string>
    <string name="bhaskara_1">Bhaskara – 1</string>
    <string name="vikram_1">Vikram – 1</string>
    <string name="_3_what_is_the_name_given_to_india_s_meteorological_research_satellite_met_sat_launched_in_2003">3.What is the name given to India’s Meteorological Research Satellite (Met Sat) launched in 2003 ?</string>
    <string name="_2_what_was_the_name_of_the_space_shuttle_that_landed_man_on_the_moon">2.What was the name of the space shuttle that landed man on the moon ?</string>
    <string name="pokharan">Pokharan</string>
    <string name="kanchipuram">Kanchipuram</string>
    <string name="sriharikota">Sriharikota</string>
    <string name="bangalore">Bangalore</string>
    <string name="_1_nuclear_explosive_devices_were_tested_in_india_at">1.Nuclear explosive devices were tested in India at ?</string>
    <string name="_1_which_of_the_following_rivers_does_not_flow_into_the_arabian_sea">1.Which of the following rivers does not flow into the Arabian Sea?</string>
    <string name="tungabhadra">Tungabhadra</string>
    <string name="sabarmati">Sabarmati</string>
    <string name="mandovi">Mandovi</string>
    <string name="narmada">Narmada</string>
    <string name="_2_which_indian_states_ut_has_the_maximum_percentage_of_mangrove_cover_in_the_country">2.Which Indian States/UT has the maximum percentage of mangrove cover in the country ?</string>
    <string name="_3_the_constitution_of_india_empowers_the_supreme_court_of_india_to_adjudicate_disputes_between_the_centre_and_the_states_through">3.The Constitution of India empowers the Supreme Court of India to adjudicate disputes between the Centre and the States through:</string>
    <string name="appellate_jurisdiction">Appellate Jurisdiction</string>
    <string name="original_jurisdiction">Original Jurisdiction</string>
    <string name="advisory_jurisdiction">Advisory Jurisdiction</string>
    <string name="writ_jurisdiction">Writ Jurisdiction</string>
    <string name="_4_which_indian_state_has_the_largest_number_of_seats_reserved_for_the_scheduled_tribes_in_the_lok_sabha">4.Which Indian State has the largest number of seats reserved for the Scheduled Tribes in the Lok Sabha ?</string>
    <string name="madhya_pradesh">Madhya Pradesh</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="andhra_pradesh">Andhra Pradesh</string>
    <string name="gujarat">Gujarat</string>
    <string name="_5_the_temperate_grassland_or_shrub_land_biome_is_commonly_known_as">5.The Temperate Grassland or Shrub-Land Biome is commonly known as ?</string>
    <string name="steppe_in_central_asia">Steppe in Central Asia</string>
    <string name="prairie_in_north_america">Prairie in North America</string>
    <string name="veld_in_south_america">Veld in South America</string>
    <string name="_6_which_of_the_following_mountain_ranges_form_the_longest_mountain_chain_in_the_world">6.Which of the following mountain ranges form the longest mountain chain in the world ?</string>
    <string name="the_rockies_of_north_america">The Rockies of North America</string>
    <string name="the_andes_of_south_america">The Andes of South America</string>
    <string name="the_transantarctic_range">The Transantarctic Range</string>
    <string name="the_great_dividing_range_of_australia">The Great Dividing Range of Australia</string>
    <string name="_7_sachin_tendulkar_hit_his_100th_international_century_against_which_among_the_following_team">7.Sachin Tendulkar hit his 100th international century against which among the following team ?</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="pakistan">Pakistan</string>
    <string name="south_africa">South Africa</string>
    <string name="_8_name_the_first_indian_to_score_a_century_in_indian_premier_league_ipl">8.Name the first Indian to score a century in Indian Premier League (IPL) ?</string>
    <string name="_9_which_among_the_following_is_a_qualitative_tool_of_monetary_policy">9.Which among the following is a qualitative tool of Monetary Policy ?</string>
    <string name="credit_ceiling">Credit Ceiling</string>
    <string name="tin">Tin</string>
    <string name="zinc">Zinc</string>
    <string name="copper">Copper</string>
    <string name="_10_gun_metal_is_the_alloy_of_which_among_the_following">10.Gun Metal is the alloy of which among the following ?</string>
    <string name="cash_reserve_ratio">Cash Reserve Ratio</string>
    <string name="credit_rationing">Credit Rationing</string>
    <string name="bank_rate">Bank Rate</string>
    <string name="note_there_are_10_questions_in_total_the_question_consists_of_single_choice_fill_in_the_blanks_and_one_or_more_than_one_choices_answer_s_best_of_luck">Note: There are 10 questions in total.The questions consist of single choice, fill in the blanks and one or more than one choices answer(s).</string>
    <string name="_1_the_gap_between_two_neurons_is_called">1. The gap between two neurons is called ?</string>
    <string name="synapse">Synapse</string>
    <string name="impulse">Impulse</string>
    <string name="thyroxin">Thyroxin</string>
    <string name="axon">Axon</string>
    <string name="_2_which_organ_secretes_insulin">2.Which organ secretes insulin ?</string>
    <string name="_3_nephron_is_the_functional_unit_of">3.Nephron is the functional unit of ?</string>
    <string name="lungs">Lungs</string>
    <string name="kidney">Kidney</string>
    <string name="thyroid">Thyroid</string>
    <string name="pancreas">Pancreas</string>
    <string name="_4_auxins_are_present_in_the_of_plant">4.Auxins are present in the _____ of plant.</string>
    <string name="bottom">Bottom</string>
    <string name="middle">Middle</string>
    <string name="tip">Tip</string>
    <string name="all_of_the_above">All of the above</string>
    <string name="_5_saffon_is_obtained_from_which_among_the_following_parts_of_the_plant">5.Saffon is obtained from which among the following parts of the plant ?</string>
    <string name="stigma">Stigma</string>
    <string name="anther">Anther</string>
    <string name="stamen">Stamen</string>
    <string name="pollen">Pollen</string>
    <string name="_6_the_juice_secreted_by_the_liver_is_called">6.The juice secreted by the liver is called ?</string>
    <string name="trypsin">Trypsin</string>
    <string name="bile">Bile</string>
    <string name="lipase">Lipase</string>
    <string name="pepsin">Pepsin</string>
    <string name="_7_which_is_the_largest_bone_in_human_body">7.Which is the largest bone in human body ?</string>
    <string name="femur">Femur</string>
    <string name="fibula">Fibula</string>
    <string name="tibia">Tibia</string>
    <string name="humerus">Humerus</string>
    <string name="_8_what_is_the_chemical_name_of_vitamin_a">8.What is the chemical name of \'Vitamin A\' ?</string>
    <string name="_9_which_among_the_following_is_not_a_heriditary_disease">9.Which among the following is not a \'heriditary\' disease ?</string>
    <string name="thalessemia">Thalessemia</string>
    <string name="color_blindness">Color Blindness</string>
    <string name="haemophilia">Haemophilia</string>
    <string name="leukemia">Leukemia</string>
    <string name="_10_the_bacterium_escherichia_coli_is_found_mainly_in_which_of_the_following">10.The bacterium \'Escherichia coli\' is found mainly in which of the following ?</string>
    <string name="human_intestine">Human Intestine</string>
    <string name="pteridophytes">Pteridophytes</string>
    <string name="root_nodules_of_leguminous_plants">Root Nodules of Leguminous plants</string>
    <string name="paddy_fields_for_nitrogen_fixation">Paddy fields for Nitrogen Fixation</string>
    <string name="_1_who_founded_the_ramakrishna_mission_in_1896_to_carry_on_humanitarian_relief_and_social_work">1. Who founded the Ramakrishna Mission in 1896 to carry on humanitarian relief and social work?</string>
    <string name="ramakrishna_paramahansa">Ramakrishna Paramahansa</string>
    <string name="swami_dayananda_saraswat">Swami Dayananda Saraswat</string>
    <string name="swami_vivekananda">Swami Vivekananda</string>
    <string name="blavatsky_and_olcott">Blavatsky and Olcott</string>
    <string name="_2_who_was_the_pioneer_of_communism_in_india">2.Who was the pioneer of Communism in India ?</string>
</resources>