<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/brainstorm"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_weight="1"
            android:background="@drawable/mylayout"
            android:backgroundTint="@color/_00B8D4"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/architects_daughter"
            android:onClick="openCurrentAffairs"
            android:padding="@dimen/_4dp"
            android:text="@string/current_affairs"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_margin="@dimen/_16dp"
            android:background="@color/_cfcfcf"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="1"
            android:background="@drawable/mylayout"
            android:backgroundTint="@color/_BDBDBD"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/architects_daughter"
            android:onClick="openGeneralKnowledge"
            android:padding="@dimen/_8dp"
            android:text="@string/general_knowledge"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_margin="@dimen/_16dp"
            android:background="@color/_cfcfcf" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="1"
            android:background="@drawable/mylayout"
            android:backgroundTint="@color/_00BFA5"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/architects_daughter"
            android:onClick="openScience"
            android:padding="@dimen/_8dp"
            android:text="@string/science_and_technology"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_margin="@dimen/_16dp"
            android:background="@color/_cfcfcf" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="1"
            android:background="@drawable/mylayout"
            android:backgroundTint="@color/_80CBC4"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/architects_daughter"
            android:onClick="openHistory"
            android:padding="@dimen/_8dp"
            android:text="@string/history"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_margin="@dimen/_16dp"
            android:background="@color/_cfcfcf" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_72dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_weight="1"
            android:background="@drawable/mylayout"
            android:backgroundTint="@color/_F48FB1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/architects_daughter"
            android:onClick="openBiology"
            android:padding="@dimen/_8dp"
            android:text="@string/biology"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>